Move employment contract template links/access to internal handbook

--- a/people-group/contracts-probation-periods/index.html.md.erb
+++ b/people-group/contracts-probation-periods/index.html.md.erb
@@ -11,171 +11,13 @@ description: "GitLab contract information and associated procedures."
 - TOC
 {:toc .hidden-md .hidden-lg}
 
-This page contains GitLab's Team Member contract templates. The DRI for all GitLab Team Member contracts are the [People Connect Team member](https://about.gitlab.com/job-families/people-group/people-connect/). Any changes to any contracts should be requested to the People Connect Team member and will require approval from our Director of Legal, Employment.
+## Contract Templates 
 
-## Employment Agreements
-
-The following contracts are for reference only and are viewable by anyone in GitLab.
-
-### United States
-
-**GitLab, Inc**
-
-- [GitLab Inc., part-time employee offer letter](https://docs.google.com/document/d/13RdKBC0as18SgkU9rU3QD--eZFVcoRkdMn2uXLvfr80/edit?usp=sharing)
-- [GitLab Inc., employee offer letter without OTE (RSU)](https://docs.google.com/document/d/1hyJQncGYpz7JaXrE2pDCGFm-OLziCNOjFv8toj-CnZs/edit?usp=sharing)
-- [GitLab Inc., employee offer letter with OTE (RSU)](https://docs.google.com/document/d/1_PhOFr-wUoJErwOG5AZSs9WopmU5Qp5f-WJpdoj5t_w/edit?usp=sharing)
-- [GitLab Inc., employee offer letter with OTE & Draw (RSU)](https://docs.google.com/document/d/1Yg7nwP49VRTkwd_nUlZiaCQw2qAxtX6HUd2vfF3x79c/edit?usp=sharing)
-- [GitLab Inc., employee offer letter with director bonus](https://docs.google.com/document/d/1RifRP-gJ6KcqdHEVjtu9o66ak4bm2WctaG04szHuhzI/edit?usp=sharing)
-- [GitLab Inc., employee offer letter with signing bonus (RSU)](https://docs.google.com/document/d/1l8Y8fR7ka-E68nBglnHGGuNNadErM4ca4kCTQ-xUh44/edit?usp=sharing)
-- [GitLab Inc., employee offer letter with signing and director bonus](https://docs.google.com/document/d/1dNYdhywryK_4Uqhgc5OzJ2KYYjdp7Lm9TkHGY7YqRNI/edit?usp=sharing)
-- [GitLab Inc., Employee offer letter (Montana)(No OTE)(RSU)](https://docs.google.com/document/d/16JCWY9y-cPf_SUtMy8Lxe0f9BfMvsF_4K_P3JPY-IB0/edit?usp=sharing)
-- [GitLab Inc., Employee offer letter (Montana) (w/OTE)(RSU)](https://docs.google.com/document/d/1qTEx5rlLpMBYv_xD3qmumfSJGCnPX_gANzJQLckOQGU/edit?usp=sharing)
-- [GitLab Inc., Employee offer letter (Montana)(w/ OTE & Draw)(RDU)](https://docs.google.com/document/d/1s0QXWpNlXsMry6zh95x_OLqZagaJQCvwAt1utcYE4Qs/edit?usp=sharing)
-- [GitLab Inc., Intern offer letter (No OTE, no RSU)](https://docs.google.com/document/d/1xmeU24xUk84qtGKKKkhwqvz5uFmJaro4G1T-a7kdjeI/edit?usp=sharing)
-
-**GitLab Federal, LLC**
-
-- [GitLab Federal LLC, employee offer letter without clearance, without OTE](https://docs.google.com/document/d/1-wX270BZ59kxmH1lASyIqXYonh-bULgxVMP76nXukMw/edit?usp=sharing)
-- [GitLab Federal LLC, employee offer letter without clearance, with OTE](https://docs.google.com/document/d/1z5g9NRddmK_Hay1-9vpqUrU0CmKbvj2nYBEvACSbI8A/edit?usp=sharing)
-- [GitLab Federal LLC, employee offer letter without clearance, with OTE & Draw](https://docs.google.com/document/d/1lxA_gedTHS9Y_I-i5edd74lPm8LFyW9q_phRpGycKEg/edit?usp=sharing)
-- [GitLab Federal LLC, employee offer letter with clearance, with OTE](https://docs.google.com/document/d/1JevKzCG1OoECPJaCTuZDwxFtqiQvMIuQIovOHERaj2s/edit?usp=sharing)
-- [GitLab Federal LLC, employee offer letter with clearance, with OTE & Draw](https://docs.google.com/document/d/1cd8UDjl2sH8fARJGyoZnBFQRE1ACe7muLZd7i1s8jYs/edit?usp=sharing)
-- [GitLab Federal LLC, employee offer letter with clearance no multiplier, with OTE](https://docs.google.com/document/d/16WSRQb0Jxv0xE-1X4uwWCrfCAXFvc82wyCfCWsrukVw/edit?usp=sharing)
-- [GitLab Federal LLC, employee offer letter with clearance no multiplier, with OTE & Draw](https://docs.google.com/document/d/1lVo5zYKUED-jQu611BUxG-AkzAePzLl1MH6Ajd4LaKk/edit?usp=sharing)
-
-### Belgium
-
-- [GitLab BV Belgium, Dutch & English employee contract without OTE (Non-Sales, Position of Trust)](https://docs.google.com/document/d/11qXqEWb1RkPTR9GG7dB9Mc6_2Pj9F7ciEIPokBq60j4/edit?usp=sharing)
-- [GitLab BV Belgium, Dutch & English employee contract without OTE (Non-Sales, Not a Position of Trust)](https://docs.google.com/document/d/1ddgDuiHBhYGAdr7ckacKq3tPd5IroPKbfFBSYZ9SBIw/edit?usp=sharing)
--  [GitLab BV Belgium, Dutch & English employee contract with OTE & Draw (Non-sales, Position of Trust)](https://docs.google.com/document/d/1X1Mq1dppLKodgc3F0RloDh70JPsP-uHRJffB_Ej-RI8/edit)
-- [GitLab BV Belgium, Dutch & English employee contract with OTE (Non-sales, Position of Trust)](https://docs.google.com/document/d/1X1Mq1dppLKodgc3F0RloDh70JPsP-uHRJffB_Ej-RI8/edit?usp=sharing)
-- [GitLab BV Belgium, Dutch & English employee contract with OTE (Non-Sales, Not a Position of Trust)](https://docs.google.com/document/d/1kiBpwdWHQ43lwyWGf6oKtU3Nz2LUXQAAYE9Gw4PB46I/edit?usp=sharing)
-- [GitLab BV Belgium, Dutch & English employee contract with OTE & Draw (Sales, Position of Trust)](https://docs.google.com/document/d/1RAcOFsbjSH89oQKZzPM-r0aRPGWEVcAGt50d8NM0AyQ/edit)
-- [GitLab BV Belgium, Dutch & English employee contract with OTE (Sales, Position of Trust)](https://docs.google.com/document/d/1RAcOFsbjSH89oQKZzPM-r0aRPGWEVcAGt50d8NM0AyQ/edit?usp=sharing)
-- [GitLab BV Belgium, Dutch & English employee contract with OTE & Draw (Sales, Not a Position of Trust)](https://docs.google.com/document/d/1Ek2FSEy2UWv4ASK7bJEOo2CSnsSc--OBv4YtaBnNZpQ/edit)
-- [GitLab BV Belgium, Dutch & English employee contract with OTE (Sales, Not a Position of Trust)](https://docs.google.com/document/d/1Ek2FSEy2UWv4ASK7bJEOo2CSnsSc--OBv4YtaBnNZpQ/edit?usp=sharing)
-- [GitLab BV Belgium, Dutch & English employee contract with OTE w/ signing bonus (Sales)](https://docs.google.com/document/d/1XCLVzGy41jYXHjaLhy_eH7R-eBd_2vPAgf0_X_ITXf0/edit?usp=sharing)
-- [GitLab BV - Belgium, Dutch  & English employee contract without OTE w/ signing bonus (Non-Sales People, Position of Trust)](https://docs.google.com/document/d/1PHb6Iq_4MgH3us9dU3GtcMQ42WzJuE1UR4vgM6Q9cFw/edit?usp=sharing)
-- [GitLab BV - Belgium, Dutch & English employee contract without OTE w/ signing bonus (Non-Sales People, Not Position of Trust)](https://docs.google.com/document/d/1ku_rpsJBelfkWlVjrSE87BN0vtK8I_JnA9c4ukbfZdU/edit?usp=sharing)
-- [GitLab BV Belgium, Dutch & English employee contract with OTE w/ signing bonus (Sales, Position of Trust)](https://docs.google.com/document/d/1KkPSPQqnUJaeJdNH7eMs2xKE8vyIPxnalTG-yKP7cdI/edit?usp=sharing)
-- [GitLab BV - Belgium, Dutch & English employee contract with OTE w/ signing bonus (Non-Sales People, Position of Trust)](https://docs.google.com/document/d/1HeqTcL3_Oc3_62ZwdjisCR_V4bQAnccgq-OegjTesUE/edit?usp=sharing)
-
-
-### Finland
-
-- [GitLab BV, Finland employee contract without OTE (Non Sales)](https://docs.google.com/document/d/1SQzrGC--Xpn9pmCUAjTXO5F_yv9B4BfKZ5pASE_03E8/edit)
-
-### Netherlands
-
-**Fixed Term**
-
-- [GitLab BV, Netherlands fixed term contract no OTE](https://docs.google.com/document/d/1gRDvTrhnZrSSTd3Yi-2mNh_0VDT1P5ofGH6Vp6RRIhY/edit?usp=sharing)
-- [Gitlab BV, Netherlands fixed term contract w/ OTE](https://docs.google.com/document/d/1ALXhPX1PM0h7XRBpgcyVvldzGs9xlo_HaDRWFiLq40o/edit?usp=sharing)
-- [GitLab BV, Netherlands fixed term contract w/ OTE & Draw](https://docs.google.com/document/d/11qvaBWgHqKpj8X6S8aPJc2FRTxth-ZnOQ6M4fssJQNQ/edit?usp=sharing)
-- [GitLab BV, Netherlands fixed term contract w/director bonus](https://docs.google.com/document/d/117IkcPrjbb5IUsCX_d9mzfxR3OcX5VTPgtP_OB1nGcs/edit)
-
-**Indefinite**
-
-- [GitLab BV, Netherlands - Indefinite contract w/ optional OTE](https://docs.google.com/document/d/1EzVRoTktxLDZRIEYHD60hwyL3EPViEIB006-qLrDHX0/edit?usp=sharing)
-- [GitLab BV, Netherlands - Indefinite contract w/ optional OTE and optional signing bonus](https://docs.google.com/document/d/1o1QzHDJqlOe2hMXluBy5lefqDuFSHSwB5kllYCDDG24/edit?usp=sharing)
-- [GitLab BV, Netherlands - Indefinite contract with Director bonus](https://docs.google.com/document/d/1D1cIxzXSAoym8G-pl7i4ZAGxHn5oJyeKwSY8b_GfWKs/edit?usp=sharing)
-- [GitLab BV, Netherlands - Indefinite contract with Director bonus w/ signing bonus](https://docs.google.com/document/d/1btKvusWHrbUG7xDC_rU4ohlnXfZ21RKGahXwGeBkReg/edit?usp=sharing)
-
-### Germany
-
-_Please note all German contracts are required to have [wet signatures](https://about.gitlab.com/handbook/people-group/contracts-probation-periods/#german-contracts)._
-
-- [GitLab GmbH, employment agreement without OTE](https://docs.google.com/document/d/1TdHjCTfJ0vfwlZLbgu92XAeK9Cm_8n410yTpPrV6HGo/edit?usp=sharing)
-- [GitLab GmbH, employment agreement with OTE & Draw](https://docs.google.com/document/d/1d2WXLRCZ3BFlFhV4WlknuFUDibdgtQF4JLXXwdZECeA/edit)
-- [GitLab GmbH, employment agreement with OTE](https://docs.google.com/document/d/1d2WXLRCZ3BFlFhV4WlknuFUDibdgtQF4JLXXwdZECeA/edit?usp=sharing)
-
-### Australia
-
-- [GitLab PTY Ltd, Australia, without OTE](https://docs.google.com/document/d/1syTv61Q0BvGlz9DnZ70Uu-XA3CrRsAHLs-KQ-YtVJ8U/edit?usp=sharing)
-- [GitLab PTY Ltd, Australia, with OTE](https://docs.google.com/document/d/1ijvUHVOy3mFPW5MktO90NcL2kpiebNGv7wXFSqI3VYE/edit?usp=sharing)
-- [GitLab PTY Ltd, Australia, with OTE & Draw](https://docs.google.com/document/d/1BCMIcWEjTt2bNjIAVGwIEUc7nrbo-Nn3JmpJIJbH2VI/edit)
-
-### New Zealand (subsidary of GitLab Australia PTY Ltd)
-
-_All team members in New Zealand are employed by GitLab Australia PTY Ltd. This contract is governed by New Zealand law._
-
-- [GitLab New Zealand per PTY Ltd without OTE](https://docs.google.com/document/d/1oY9Sxgj0HCXTsAJWIO69V1bI9rm_tX7b-v9K0RgTeXM/edit?usp=sharing)
-- [GitLab New Zealand per PTY Ltd with OTE](https://docs.google.com/document/d/1LRD4lDbQMTHOux3L26wOzLAn2QruCy8FV7MDBQpDBZg/edit?usp=sharing)
-- [GitLab New Zealand per PTY Ltd with OTE & Draw](https://docs.google.com/document/d/1lO4T32nK2tZEUZQ6_sLEmg1gIhYNaJSwExzzMVrV2vI/edit?usp=sharing)
-
-### United Kingdom
-
-- [GitLab UK Ltd, without OTE](https://docs.google.com/document/d/1VWmo4QZcgsQJriC4NdxEF3kgHrYFUtRQPlmkkSj5Lu8/edit)
-- [GitLab UK Ltd, with OTE & Draw](https://docs.google.com/document/d/19ZUxDtCGxZo1hMPYYn9RUiqsWSO-Ns9fLMaD3hWoyoU/edit#)
-- [GitLab UK Ltd, with OTE](https://docs.google.com/document/d/1B6sJjSSdOsXltvJ6I0Al2TeFUcN_0iTFqg4YSmbtkug/edit#)
-- [GitLab UK Ltd., with OTE or Director and signing bonus](https://docs.google.com/document/d/1wOUfNb4gECXjVw75zuspRYqbIpdYC9mYjOFSQnlzHwg/edit#)  
-- [GitLab UK Ltd., without OTE and with signing bonus)](https://docs.google.com/document/d/1IaWUWsxZZiCHlqxfndGgSiyxfy6uDsOzItQ5Esrrb9U/edit#)
-
-### France
-
-- [GitLab France S.A.S employment agreement folder](https://drive.google.com/drive/folders/1_Qbq_zJTq0cxQKgp6AgYxNMVw96uetVv)
-
-### Canada
-
-**QC w/o Signing Bonus**
-
-- [GitLab Canada Corp - (Quebec Only) D_S_E Group (No  OTE)](https://docs.google.com/document/d/1Xbh-S5W_gMHglsKssXLdZiN8aNzYPSxwNmiwG_-boOs/edit?usp=sharing)
-- [GitLab Canada Corp - (Quebec Only) D_S_E Group (with OTE)](https://docs.google.com/document/d/1plCfn1knxIQgR49nwyjY53A9eW-9LvA_mvXKWd8TO7c/edit?usp=sharing)
-- [GitLab Canada Corp - (Quebec Only) D_S_E Group (with OTE & Draw)](https://docs.google.com/document/d/1RWntVco5cHPZRTo6_uD539DFjq3MkLKOtClUnCuaGvI/edit?usp=sharing)
-- [GitLab Canada Corp - (Quebec Only) IC/Mgr/Sr.Mgr (No  OTE)](https://docs.google.com/document/d/13utUaX2LREtbcSXy8DLWDQw98xYrWhARlwqqinKAGsQ/edit?usp=sharing)
-- [GitLab Canada Corp - (Quebec only) IC/Mgr/Sr.Mgr (with OTE)](https://docs.google.com/document/d/1B5q51Lbbi5hHq7PtJQdMBX52sMvDM00pu2ld1XoGlPo/edit?usp=sharing)
-- [GitLab Canada Corp - (Quebec only) IC/Mgr/Sr.Mgr (with OTE & Draw)](https://docs.google.com/document/d/1KANEsG6YJfO6-PP9Rh21xEzLiXLwTA0XFYT52ifJDfk/edit?usp=sharing)
-
-**Non-QC w/o Signing Bonus**
-
-- [GitLab Canada Corp - (All Provinces except for Quebec - with probationary period) No OTE](https://docs.google.com/document/d/1A6sHEU_G5IhyXPvJ9H312Dl9N2gq_cIvBZg1ngHa3G0/edit?usp=sharing)
-- [GitLab Canada Corp - (All Provinces except Quebec - with probationary period with OTE](https://docs.google.com/document/d/1k2cWsYLIZVcvUgFRi5DIrs4QVSY-ubpFV9KRN8hrCZE/edit?usp=sharing)
-- [GitLab Canada Corp - (All Provinces except Quebec) with OTE & Draw](https://docs.google.com/document/d/12V0dC8eKcIdHi2lKKf3FFIgdmb_NQy2S0N8N838UbBE/edit?usp=sharing)
-- [GitLab Canada Corp - (All Provinces except Quebec) Intern no OTE](https://docs.google.com/document/d/10_Ee-b-DxStZDbvHfZTDkaFm6pi6jQ1YnkflaW_O-yY/edit?usp=sharing)
-
-**QC with Signing Bonus**
-
-- [GitLab Canada Corp - (Quebec Only) IC/Mgr/Sr.Mgr NO OTE w/signing bonus](https://docs.google.com/document/d/19WyQPnWC3AkksXQjA6lr_LjTPyP2Rr1QaE-U6e0fwvE/edit?usp=sharing)
-- [GitLab Canada Corp - (Quebec Only) IC/Mgr/Sr.Mgr with OTE and signing bonus](https://docs.google.com/document/d/1VnOFWrzljZjiluQx0V8GwrjJ_6SHhV_5UJxxiw1eAoM/edit?usp=sharing)
-- [GitLab Canada Corp - (Quebec Only) IC/Mgr/Sr.Mgr with OTE, Draw and signing bonus](https://docs.google.com/document/d/1ikRJ1g2P0vJnVHHjgxGz697UXEjKOfhVXCUMBHy6GD4/edit?usp=sharing)
-- [GitLab Canada Corp - (Quebec Only) D_S_E Group NO OTE w/signing bonus](https://docs.google.com/document/d/1Go2mHDJmTqdTYE98ERu1yQgNm2B05o9SswqB7nY7RMg/edit?usp=sharing)
-- [GitLab Canada Corp - (Quebec Only) D_S_E Group w/ OTE and signing bonus](https://docs.google.com/document/d/1IsM-Ej6PqkjCL2dL-MROG9uiJULBlBWnxmP28vn8vco/edit?usp=sharing)
-- [GitLab Canada Corp - (Quebec Only) D_S_E Group w/ OTE, Draw and signing bonus](https://docs.google.com/document/d/1Q8X0PClXBhEh-jmMgzu-Akkq1xoPX7bFmYFJlIjzBH4/edit?usp=sharing)
-
-**Non-QC with Signing Bonus**
-
-- [GitLab Canada Corp - (All Provinces except Quebec - with probationary period) No OTE w/signing bonus](https://docs.google.com/document/d/1ZDkp8FhhF8CpPnJIZNX6VS5EjCTlqP2mjyjTIFTrXDY/edit?usp=sharing)
-- [GitLab Canada Corp - (All Provinces except Quebec) w/ OTE and signing bonus](https://docs.google.com/document/d/1xtNLTtm8LgOy3LDJgYFHmzVsz2TFdHDtcgTHO4xx48Y/edit?usp=sharing)
-- [GitLab Canada Corp - (All Provinces except Quebec) w/ OTE, Draw and signing bonus](https://docs.google.com/document/d/1ZoHVAYmjcUFEQEgQpGMXEOOk_b-137fgLssjuB7lJRk/edit?usp=sharing)
-
-### Japan
-
-- [GitLab GK employment agreement without OTE](https://docs.google.com/document/d/1oLZjIFjtLBY7wugARUf9GI8CsyW-6kvt344rTbOMnnM/edit?usp=sharing)
-- [GitLab GK employment agreement with OTE](https://docs.google.com/document/d/1_PzQmGgaQprdQwPukXYyVhx9K3sTxowaPuhXjyJq0ME/edit?usp=sharing)
-
-### Ireland 
-
-- [GitLab Ireland Ltd. without OTI](https://docs.google.com/document/d/1QltuPYmF39zL-eRRosAHNABS_-f6eo-2uCKQCEWHAQ4/edit)
-- [GitLab Ireland Ltd. without OTI, with Signing bonus](https://docs.google.com/document/d/1vXDNy-rQqzE9Pgmluhk-_qFUNgh0rUQRO7isuOJLu68/edit?usp=sharing)
-- [GitLab Ireland Ltd. with OTI](https://docs.google.com/document/d/1PGSkPUMRyki2-WX3k50nWPknVUnNik26QNDiso5MVsw/edit) 
-- [GitLab Ireland Ltd. with OTI, with Signing Bonus](https://docs.google.com/document/d/1Kfw41A8iZsbefajrhnieuig5u-LK3CEpYglgMUsrCGM/edit?usp=sharing)
-- [GitLab Ireland Ltd. Intern](https://docs.google.com/document/d/1mzBAsvpuzJtJlo_yBCd9gkJwZxA24q7vvOuxzBT3WY4/edit?usp=sharing)
-
-### Singapore
-
-- [Singapore, OTE & Draw](https://docs.google.com/document/d/1gUjknqbANrHhBpUNXRJRUJKjHLxDrrRI2pLwn-ayAx0/edit)
-- [Singapore OTE](https://docs.google.com/document/d/1gUjknqbANrHhBpUNXRJRUJKjHLxDrrRI2pLwn-ayAx0/edit) 
-- [Singapore w/out OTE](https://docs.google.com/document/d/1-N3IaeHXM6g5-wYMR7E47xJEmeOVXlB58UUyOER6ZMc/edit)
-
-### South Korea
-
-- [South Korea OTE](https://docs.google.com/document/d/1a1IFKlOGOj-a737NlbqXSisTwdJ2b3Uit0pbCsvKTzc/edit)
-- [South Korea OTE & Draw](https://docs.google.com/document/d/1a1IFKlOGOj-a737NlbqXSisTwdJ2b3Uit0pbCsvKTzc/edit)
-- [South Korea w/out OTE](https://docs.google.com/document/d/1c794DYsupWsq-iqZns2JP7VNwjnd7H6Qs3ikQ0xHxp8/edit)
+GitLab's Team Member contract templates are accessible (for reference) within GitLab only [(here)](https://internal-handbook.gitlab.io/handbook/people-group/people-operations/people-connect/employment_contracts/#employment-agreements). The DRI for all GitLab Team Member contracts is the People Connect Team. Any changes to any contracts should be requested to the People Connect Team and will require approval from our Senior Director of Legal, Employment.
 
 ## Process for Suggesting Changes to the Contract Templates
 
-Contracts are audited and updated on a semi-annual basis. All suggested changes should be added to the current [Global Employment Contract Audit issue](https://gitlab.com/gitlab-com/people-group/people-operations/General/-/blob/master/.gitlab/issue_templates/global-employment-contract-audit.md). If **immediate** changes are needed to any one of the contract templates, follow the process below:
+Contracts are audited and updated on a regular basis. All suggested changes should be added to the current [Global Employment Contract Audit issue](https://gitlab.com/gitlab-com/people-group/people-operations/General/-/blob/master/.gitlab/issue_templates/global-employment-contract-audit.md). If **immediate** changes are needed to any one of the contract templates, follow the process below:
 
 1. Create a Contract Update Issue - The template can be found [here](https://gitlab.com/gitlab-com/people-group/people-operations/General/-/blob/master/.gitlab/issue_templates/Contract-Update-Add.md). 
 1. Open the relevant contract template, which automatically redirects to its original editable Google Doc.
