--- a/people-group/index.html.md.erb
+++ b/people-group/index.html.md.erb
@@ -257,7 +257,8 @@ If you need assistance reviewing your CultureAmp Survey, please complete this [i
 - [Code of Business Conduct and Ethics](https://ir.gitlab.com/static-files/7d8c7eb3-cb17-4d68-a607-1b7a1fa1c95d)
 - [Promotions and Transfers](/handbook/people-group/promotions-transfers/)
 - [Employment Solutions (International Expansion)](/handbook/people-group/employment-solutions/)
-- [Contracts, Probation Periods & PIAA](/handbook/people-group/contracts-probation-periods/)
+- [Contracts](https://internal-handbook.gitlab.io/handbook/people-group/people-operations/people-connect/employment_contracts/) 
+- [Probation Periods & PIAA](/handbook/people-group/contracts-probation-periods/)
 - [Onboarding](/handbook/people-group/general-onboarding/)
 - [Offboarding](/handbook/people-group/offboarding/)
 - [Celebrations](/handbook/people-group/celebrations/)
