--- a/people-group/relocation/index.html.md.erb
+++ b/people-group/relocation/index.html.md.erb
@@ -186,7 +186,7 @@ To be added
 
 ##### Tasks for People Connect 
 
-1. Create a new [contract](/handbook/people-group/contracts-probation-periods/) for the team member confirming new compensation (if applicable) and effective date.
+1. Create a new [contract](https://internal-handbook.gitlab.io/handbook/people-group/people-operations/people-connect/employment_contracts/) for the team member confirming new compensation (if applicable) and effective date.
 - The `sent by email to:` section must have a personal email address
 - No stock options are given through relocation, so that line can be removed
 - Per the [Probation Period](https://about.gitlab.com/handbook/people-group/contracts-probation-periods/#probation-period) section:
