--- a/development/sec/govern/index.html.md.erb
+++ b/development/sec/govern/index.html.md.erb
@@ -28,6 +28,8 @@ department_regexp = /(#{Regexp.union(departments)})/
 direct_team(role_regexp: department_regexp, manager_slug: 'pcalder')
 %>
 
+## All Team Members
+
 ### Threat Insights
 <%=  direct_team(role_regexp: /Engineer(.*)Govern:Threat Insights/, manager_slug: 'nmccorrison') %>
 <%=  direct_team(role_regexp: /Engineer(.*)Govern:Threat Insights/, manager_slug: 'thiagofigueiro') %>
@@ -95,6 +97,26 @@ MR Type labels help us report what we're working on to industry analysts in a wa
 
 We meet bi-weekly synchronously to discuss stage and group wide topics. We primarily try to use Epics/Issues to intiate discussions and maintian transparency. We use the 
 [Anti-abuse-govern-growth-sub-dept Board](https://gitlab.com/gitlab-com/anti-abuse-govern-growth-sub-dept/-/boards/4833026) to better organize our discussions.
+
+### Business Continuity - Coverage and Escalation
+
+The following table lists the Govern Stage management team members who will cover in the event that one or more are unable to work due to unforeseen circumstances.
+
+| Team Member               | Covered by                | Escalation            |
+| -----                     | -----                     | -----                 |
+| Phil Calder               | Wayne Haber               | Christopher Lefelhocz |
+| Alan (Maciej) Paruszewski | Nathan Rosandich          | Phil Calder           |
+| Nathan Rosandich          | Alan (Maciej) Paruszewski | Phil Calder           |
+| Thiago Figueiró           | Neil McCorrison           | Phil Calder           |
+| Neil McCorrison           | Thiago Figueiró           | Phil Calder           |
+
+Team members should contact any Govern Engineering Manager by mentioning in `#sd_govern_engineering` if they need management support for a problem that arises, such as a production incident or feature change lock, when their direct manager is not available. The Govern manager can provide guidance and coordination to ensure that the team member receives the appropriate help.
+
+The Engineering Manager will allocate open issues and merge requests to another engineer, ideally in the same [group](#all-team-members), if an engineer is absent.
+
+Some people management tasks, including [Workday](/handbook/people-group/workday/workday-guide) and [Navan Expense](/handbook/business-technology/enterprise-applications/guides/navan-expense-guide), may require for escalation or delegation.
+
+In the event that one or more team members become unavailable for any reason, this can serve as the foundation for a business continuity plan (BCP) and serve as a basic guide for Managing Engineering continuity.
 
 ## Links and resources
 
