--- a/quality/quality-engineering/dev-qe-team/index.html.md.erb
+++ b/quality/quality-engineering/dev-qe-team/index.html.md.erb
@@ -26,78 +26,105 @@ Here is an [overview](https://gitlab.com/gitlab-com/gitlab-OKRs/-/work_items/122
 
 ## Dev Section
 
-### Team Members
-
 Quality Engineering Manager: Ramya Authappan
+
+### Team Members
 
 | S.No 	| Stage     	| Group                    	| SET Counterpart                                                      	|
 |------	|-----------	|--------------------------	|---------------------------------------------------------------------	|
 | 1    	| Create    	| [Source Code]            	| Anastasia McDonald                                                    |
-| 2    	| Create    	| [Code Review]            	| Jay McCure                                                           	|
-| 3    	| Create    	| [Editor]                 	| TBH                                                   	            |
+| 2    	| Create    	| [Editor]                 	| Nivetha Prabakaran                                                 	|
+| 3     | Create        | [Code Review]             | Jay McCure                                                                     |
 | 4    	| Manage    	| [Authentication and Authorization]                 	| Sanad Liaquat                             |
-| 5    	| Manage    	| [Import-Integrations]     | Andrejs Cunskis                                                      	|
-| 6    	| Manage    	| [Foundations]           	| TBH                                                                   |
-| 7    	| Plan    	    | [Optimize]               	| TBH                                                                  	|
+| 5     | Manage        | [Import-Integrations]    | -                                                                     |
+| 6     | Manage        | [Foundations]             | -                                                                     |
+| 7    	| Plan          | [Optimize]               	| Andrejs Cunskis                                                       |
 | 8   	| Plan      	| [Project Management]     	| Désirée Chevalier                                                    	|
-| 9   	| Plan      	| [Product Planning]       	| TBH                                                                  	|
-| 10   	| Plan      	| [Knowledge]                	| TBH                                                                  	|
+| 9     | Plan          | [Knowledge]               | -                                                                     |
+| 10   	| Plan      	| [Product Planning]       	| -                                                                     |
+
+* There are no hiring plans for SETs in FY24.  
 
 ### Quality Performance Indicators for Dev Section
 
 (<a href="https://app.periscopedata.com/app/gitlab/736012/Quality-Embedded-Dashboard" target="_blank">Sisense↗</a>)
-<embed width="100%" height="550" src="<%= signed_periscope_url({ dashboard: 736012, embed: 'v2', filters: [{name: 'Development_Section' , value: 'dev' }]}) %>">
+<embed width="100%" height="250" src="<%= signed_periscope_url({ dashboard: 736012, embed: 'v2', filters: [{name: 'Development_Section' , value: 'dev' }]}) %>">
 
 ### Bugs Prioritization
 
 As part of the [Cross functional prioritization](https://about.gitlab.com/handbook/product/cross-functional-prioritization), the SETs or the QEMs (in the absence of a dedicated SET for the product group) prioritise the list of bugs and help in the planning of the upcoming milestone. The [Bug Prioritization Dashoard](https://app.periscopedata.com/app/gitlab/1037965/Bug-Prioritization) is used for this process.
 
-Please find below the relevant projects/epics/issue boards used by various product groups to plan monthly releases.
-
-| **S.No** | **Group**            | **DRI for Bugs Prioritization** | **Planning Issues**                                                                                                                                                                                                                |
-|----------|----------------------|---------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| 1        | [Source Code]        |  Anastasia McDonald             | [Planning Issue](https://gitlab.com/gitlab-org/create-stage/-/issues/?search=Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Asource%20code&first_page_size=20)                                                       |
-| 2        | [Code Review]        | Jay McCure                      | [Planning Issue](https://gitlab.com/gitlab-org/create-stage/-/issues/?search=Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Acode%20review&first_page_size=20)                                                       |
-| 3        | [Editor]             | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-com/create-stage/editor/-/issues/?sort=created_asc&state=all&label_name%5B%5D=Planning%20Issue&first_page_size=20) |
-| 4        | [Authentication and Authorization]  | Sanad Liaquat    | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aauthentication%20and%20authorization&first_page_size=20) |
-| 5        | [Import-Integrations]             | Andrejs Cunskis                 |[Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aimport&first_page_size=20)              |
-| 6        | [Foundations]        | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/manage/foundations/team-tasks/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Afoundations&first_page_size=20)                         |
-| 7        | [Optimize]           | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aoptimize&first_page_size=20)                             |
-| 8        | [Project Management] | Désirée Chevalier               | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproject%20management&first_page_size=20)                                              |
-| 9        | [Product Planning]   | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproduct%20planning&first_page_size=20)                                                |
-| 10       | [Knowledge]          | Ramya Authappan                 | [Planning Issue](https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproduct%20planning&first_page_size=20)                                                |
+<details>
+<summary>Please find below the relevant projects/epics/issue boards used by various product groups to plan monthly releases.</summary>
+<ul>
+	<li>
+		<a href="https://gitlab.com/gitlab-org/create-stage/-/issues/?search=Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Asource%20code&first_page_size=20&_gl=1*c0hrdt*_ga*MTEyMzk0MjUyNC4xNjQ3MjMwNjM4*_ga_ENFH3X7M5Y*MTY3NzA2NzM3OC4yMjguMS4xNjc3MDY4Mjg4LjAuMC4w">Source Code</a>
+ 	</li>
+     <li>
+     <a href="https://gitlab.com/gitlab-org/create-stage/-/issues/?search=Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Acode%20review&first_page_size=20&_gl=1*c0hrdt*_ga*MTEyMzk0MjUyNC4xNjQ3MjMwNjM4*_ga_ENFH3X7M5Y*MTY3NzA2NzM3OC4yMjguMS4xNjc3MDY4Mjg4LjAuMC4w">Code Review</a>
+  </li>
+  <li>
+		<a href="https://gitlab.com/gitlab-com/create-stage/editor/-/issues/?sort=created_asc&state=all&label_name%5B%5D=Planning%20Issue&first_page_size=20&_gl=1*c0hrdt*_ga*MTEyMzk0MjUyNC4xNjQ3MjMwNjM4*_ga_ENFH3X7M5Y*MTY3NzA2NzM3OC4yMjguMS4xNjc3MDY4Mjg4LjAuMC4w">Editor</a>
+ 	</li>
+     <li>
+     <a href="https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aauthentication%20and%20authorization&first_page_size=20&_gl=1*m1py63*_ga*MTEyMzk0MjUyNC4xNjQ3MjMwNjM4*_ga_ENFH3X7M5Y*MTY3NzA2NzM3OC4yMjguMS4xNjc3MDY4Mjg4LjAuMC4w">Authentication & Authorization</a>
+  </li>
+  <li>
+		<a href="https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aimport&first_page_size=20&_gl=1*m1py63*_ga*MTEyMzk0MjUyNC4xNjQ3MjMwNjM4*_ga_ENFH3X7M5Y*MTY3NzA2NzM3OC4yMjguMS4xNjc3MDY4Mjg4LjAuMC4w">Import-Integrations</a>
+ 	</li>
+     <li>
+     <a href="https://gitlab.com/gitlab-org/manage/foundations/team-tasks/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Afoundations&first_page_size=20&_gl=1*m1py63*_ga*MTEyMzk0MjUyNC4xNjQ3MjMwNjM4*_ga_ENFH3X7M5Y*MTY3NzA2NzM3OC4yMjguMS4xNjc3MDY4Mjg4LjAuMC4w">Foundations</a>
+  </li>
+  <li>
+		<a href="https://gitlab.com/gitlab-org/manage/general-discussion/-/issues/?sort=created_date&state=opened&label_name%5B%5D=Planning%20Issue&label_name%5B%5D=group%3A%3Aoptimize&first_page_size=20&_gl=1*nce8xi*_ga*MTEyMzk0MjUyNC4xNjQ3MjMwNjM4*_ga_ENFH3X7M5Y*MTY3NzA2NzM3OC4yMjguMS4xNjc3MDY4Mjg4LjAuMC4w">Optimize</a>
+ 	</li>
+     <li>
+     <a href="https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproject%20management&first_page_size=20&_gl=1*nce8xi*_ga*MTEyMzk0MjUyNC4xNjQ3MjMwNjM4*_ga_ENFH3X7M5Y*MTY3NzA2NzM3OC4yMjguMS4xNjc3MDY4Mjg4LjAuMC4w">Project Management</a>
+  </li>
+  <li>
+		<a href="https://about.gitlab.com/handbook/product/categories/#product-planning-group">Product Planning</a>
+ 	</li>
+     <li>
+     <a href="https://gitlab.com/gitlab-org/plan/-/issues/?search=Release%20Planning&sort=created_date&state=opened&label_name%5B%5D=group%3A%3Aproduct%20planning&first_page_size=20&_gl=1*dcea24*_ga*MTEyMzk0MjUyNC4xNjQ3MjMwNjM4*_ga_ENFH3X7M5Y*MTY3NzA2NzM3OC4yMjguMS4xNjc3MDY4Mjg4LjAuMC4w">Knowledge</a>
+  </li>
+</ul>
+</details>
 
 ## Analytics Section
 
-### Team Members
-
 Quality Engineering Manager: Ramya Authappan
+
+### Team Members
 
 | S.No 	| Stage     	| Group                    	| SET Counterpart                                                      	|
 |------	|-----------	|--------------------------	|---------------------------------------------------------------------	|
-| 1    	| Analytics    	| [Product Intelligence]    | Sean Gregory                                                    |
-| 2    	| Analytics    	| [Product Analytics]       | TBH                                                           	|
+| 1    	| Analytics    	| [Product Analytics]       | Sean Gregory                                                          |
+| 2     | Analytics     | [Product Intelligence]    | -                                                                     |
 
 ### Quality Performance Indicators for Analytics Section
 
 (<a href="https://app.periscopedata.com/app/gitlab/736012/Quality-Embedded-Dashboard" target="_blank">Sisense↗</a>)
-<embed width="100%" height="550" src="<%= signed_periscope_url({ dashboard: 736012, embed: 'v2', filters: [{name: 'Development_Section' , value: 'analytics' }]}) %>">
+<embed width="100%" height="250" src="<%= signed_periscope_url({ dashboard: 736012, embed: 'v2', filters: [{name: 'Development_Section' , value: 'analytics' }]}) %>">
 
 ### Bugs Prioritization
 
 As part of the [Cross functional prioritization](https://about.gitlab.com/handbook/product/cross-functional-prioritization), the SETs or the QEMs (in the absence of a dedicated SET for the product group) prioritise the list of bugs and help in the planning of the upcoming milestone. The [Bug Prioritization Dashoard](https://app.periscopedata.com/app/gitlab/1037965/Bug-Prioritization) is used for this process.
 
-Please find below the relevant projects/epics/issue boards used by various product groups to plan monthly releases.
-
-| **S.No** | **Group**            | **DRI for Bugs Prioritization** | **Planning Issues**                                                                                                                                                                                                                |
-|----------|----------------------|---------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| 1        | [Product Intelligence]|  Sean Gregory                  | TBD |
-| 2        | [Product Analytics]  | Ramya Authappan                 | TBD |
+<details>
+<summary>Please find below the relevant projects/epics/issue boards used by various product groups to plan monthly releases.</summary>
+<ul>
+	<li>
+		Product Intelligence - TBD
+ 	</li>
+    <li>
+        Product Analytics - TBD
+    </li>
+</ul>
+</details>
 
 [Dev section]: /handbook/product/categories/#dev-section
 [Authentication and Authorization]: /handbook/product/categories/#authentication-and-authorization-group
-[Organization]: /handbook/product/categories/#organization-group
-[Import]: /handbook/product/categories/#import-group
+[Import-Integrations]: /handbook/product/categories/#import-group
 [Optimize]: /handbook/product/categories/#optimize-group
 [Source Code]: /handbook/product/categories/#source-code-group
 [Code Review]: /handbook/product/categories/#code-review-group
@@ -105,7 +132,6 @@ Please find below the relevant projects/epics/issue boards used by various produ
 [Project Management]: /handbook/product/categories/#project-management-group
 [Product Planning]: /handbook/product/categories/#product-planning-group
 [Certify]: /handbook/product/categories/#certify-group
-[Integrations]: /handbook/product/categories/#integrations-group
 [Foundations]: /handbook/product/categories/#foundations-group
 [Analytics section]: /handbook/product/categories/#analytics-section
 [Product Intelligence]: /handbook/product/categories/#product-intelligence-group
