Fix some formatting and and troops guidance

--- a/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
@@ -266,11 +266,11 @@ It is recommended to review the executive briefing with your champion, key stake
 
 
 
-### Salesforce Tracking
+## Salesforce Tracking
 
 The Account Leader (AE) is responsible for maintaining the Salesforce opportunity level VSA Tracking Fields outline below:
 
-- **VSA Start Date** - When the VSA kickoff call with the prospect/customer commences.  
+- **VSA Start Date** - Date of the VSA kickoff call with the prospect/customer.  
 - **VSA End Date** - The date the VSA readout is presented to the prospect/customer.
 - **VSA Status** - The status of the VSA where
   - **Planning** - Internal qualification and planning is occuring.  VSA start date should not be set when in planning.
@@ -284,9 +284,12 @@ The Account Leader (AE) is responsible for maintaining the Salesforce opportunit
   - **Neutral** - The prospect/customer was receptive but we do not have clear next steps.
   - **Negative** - The prospect/customer was not receptive to our recommendation.
 - **VSA URL** - The URL to the VSA Readout presentation
-- **VSA Start Date Net ARR** - Auto populated field
+- **VSA Start Date Net ARR** - (Auto populated field) The opportunity Net ARR when the VSA start date is populated.  
 
-Update the following fields.
+Solutions Architects should leverage the following [SA Actiity Types](https://about.gitlab.com/handbook/customer-success/solutions-architects/processes/activity-capture/activity-desc/#description-for-value-stream-assessment) when [loggin activity](https://about.gitlab.com/handbook/customer-success/solutions-architects/processes/activity-capture/activity-desc/#description-for-value-stream-assessment)  
+
+- VSA Pitch
+- VSA Execution
 
 ## Training and Enablement
 
