Refined SFDC tracking info

--- a/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
@@ -168,7 +168,7 @@ The process which we will go through, at a high level, is as follows  (per funct
     1. Initial process "walk-through" / information discovery
         1. Capture people, processes and technology per persona/team ([information disovery guide](https://docs.google.com/spreadsheets/d/1uaXYION8me79Akm9KKhItAEZmGxaiZmKX8zRlLbs7vI/edit#gid=666358624))
     1. 2nd process "walk-through" (if needed)
-1. Design future state (when doing a single workshop with all personas)
+1. Design future state (when doing a single workshop with all personas or in the planning meeting with your sponsor)
     1. Review the expectations again, to align the team on the target they are aiming to create
     1. Determine "right work" (which processes and steps are required for the value stream to be optimal)
         1. Remove processes and process steps when they are truely unnecessary
@@ -271,19 +271,19 @@ It is recommended to review the executive briefing with your champion, key stake
 The Account Leader (AE) is responsible for maintaining the Salesforce opportunity level VSA Tracking Fields outline below:
 
 - **VSA Start Date** - Date of the VSA kickoff call with the prospect/customer.  
-- **VSA End Date** - The date the VSA readout is presented to the prospect/customer.
+- **VSA End Date** - The date the VSA readout is presented to the prospect/customer or the date of the last meeting with the prospect if the VSA status is set to "Stalled."
 - **VSA Status** - The status of the VSA where
-  - **Planning** - Internal qualification and planning is occuring.  VSA start date should not be set when in planning.
-  - **Pitched** - We've positioned a VSA with the prospect/customer.  VSA start date should not until VSA kickoff.
-  - **Accepted** - When the customer has agreed to do a VSA and has scheduled a kickoff call.
+  - **Planning** - Internal qualification and planning is occuring.  VSA start date should not be set when this status is set.
+  - **Pitched** - We've positioned a VSA with the prospect/customer.  VSA start date should not be set when this status is set.
+  - **Accepted** - When the customer has agreed to do a VSA and has scheduled a kickoff call.  VSA start date should not be set when this status is set.
   - **In-process** - We've had a kickoff call, are actively facilitating the VSA, or are compiling the result for the readout.
   - **Completed** - We have presented the VSA executive readout to the prospect/customer.  VSA End Date should be set.
-  - **Stalled** - We were in-process but the prospect/customer is non-responsive and we can't schedule additional interviews.
+  - **Stalled** - We were in-process but the prospect/customer is non-responsive and we can't schedule additional interviews.  VSA End Date should be set.
 - **VSA Readout** - The sentiment from the VSA Readout meeting.
   - **Positive** - The prospect/customer was highly receptive to our recommendations and we have progressive next steps.
   - **Neutral** - The prospect/customer was receptive but we do not have clear next steps.
   - **Negative** - The prospect/customer was not receptive to our recommendation.
-- **VSA URL** - The URL to the VSA Readout presentation
+- **VSA URL** - The URL to the the google drive folder containing the readout presentation and any other VSA artifacts.
 - **VSA Start Date Net ARR** - (Auto populated field) The opportunity Net ARR when the VSA start date is populated.  
 
 Solutions Architects should leverage the following [SA Actiity Types](https://about.gitlab.com/handbook/customer-success/solutions-architects/processes/activity-capture/activity-desc/#description-for-value-stream-assessment) when [loggin activity](https://about.gitlab.com/handbook/customer-success/solutions-architects/processes/activity-capture/activity-desc/#description-for-value-stream-assessment)  
