--- a/development/ops/orchestrate/index.html.md.erb
+++ b/development/ops/orchestrate/index.html.md.erb
@@ -164,8 +164,26 @@ The Orchestrate team uses [GitLab QA](https://gitlab.com/gitlab-org/gitlab-qa) f
 
 Our target availability is 99.95%
 
-
 ## Async Issue Updates
+
+In order to optimize async collaboration across a big team we use issue updates to share progress completed on a specific issue or epic.
+Weekly updates on progress and status will be added to each issue by its assignee. A weekly update may be skipped if there was no progress. It's preferable to update the issue rather than the related merge requests, as those do not provide a view of the overall progress. This applies to issues with the labels `workflow::in dev` or `workflow::refinement`
+
+The status comment should include what percentage complete the work is, the confidence of the person that their estimate is correct and, a brief note on what was done. It's perfectly acceptable to have multiple updates if more than one DRI is working on the issue.
+
+As a part of the async update it's important to verify that the issue and related MRs workflow labels are correctly set.
+
+#### Example
+
+```
+## Async status update
+
+Complete: 80%
+Confidence: 90%
+Notes: expecting to go into review tomorrow
+```
+
+To simplify the work of adding and keeping track of async updates [TalTal](https://taltal-new.netlify.app/) can be used.
 
 ## Career Development and Promotions
 
