Fix label name in async update

--- a/development/ops/orchestrate/index.html.md.erb
+++ b/development/ops/orchestrate/index.html.md.erb
@@ -167,7 +167,7 @@ Our target availability is 99.95%
 ## Async Issue Updates
 
 In order to optimize async collaboration across a big team we use issue updates to share progress completed on a specific issue or epic.
-Weekly updates on progress and status will be added to each issue by its assignee. A weekly update may be skipped if there was no progress. It's preferable to update the issue rather than the related merge requests, as those do not provide a view of the overall progress. This applies to issues with the labels `workflow::in dev` or `workflow::refinement`
+Weekly updates on progress and status will be added to each issue by its assignee. A weekly update may be skipped if there was no progress. It's preferable to update the issue rather than the related merge requests, as those do not provide a view of the overall progress. This applies to issues with the labels `workflow::in dev` or `workflow::in review` 
 
 The status comment should include what percentage complete the work is, the confidence of the person that their estimate is correct and, a brief note on what was done. It's perfectly acceptable to have multiple updates if more than one DRI is working on the issue.
 
